<?xml version="1.0"?>
<package format="3">
  <name>action_client_pkg</name>
  <version>0.0.1</version>
  <description>ROS2 Action Client Example Package</description>

  <maintainer email="user@todo.todo">ZZH</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>

  <exec_depend>launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>